upgraded CopyPastaParser to handle both kind of addres fields